Wed Apr  3 01:54:10 2002  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* ext/extmk.rb.in (enable_config): follow lib/mkmf.rb.

Mon Apr  1 10:56:40 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* re.c (match_setter): it's OK to assign nil to $~.

Fri Mar 29 20:21:58 2002  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* lib/mkmf.rb (create_makefile): default FLAGS to empty strings.

Fri Mar 29 16:36:52 2002  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* lib/mkmf.rb (arg_config): should use Shellwords::shellwords like
	  ext/extmk.rb.in.

	* lib/mkmf.rb (enable_config): default had priority over command
	  line options and configure_args.

	* lib/mkmf.rb: support autoconf 2.53 style variables from
	  environment.

	* lib/mkmf.rb: add directory options.

Wed Mar 27 14:38:16 2002  WATANABE Hirofumi  <eban@ruby-lang.org>

	* io.c (READ_DATA_PENDING): uClibc 0.9.10 support.
	  use !feof(fp) for default behavior.

Wed Mar 27 04:44:48 2002  Akinori MUSHA  <knu@iDaemons.org>

	* file.c (rb_file_s_expand_path): Do not free the pointer obtained
	  from getenv().

Tue Mar 26 14:08:11 2002  okabe katsuyuki <HGC02147@nifty.ne.jp>

	* win32/mkexports.rb: support VC++.NET.

Mon Mar 25 19:30:25 2002  WATANABE Hirofumi  <eban@ruby-lang.org>

	* ext/extmk.rb.in (arg_config): get rid of single quotes
	  for autoconf 2.53.

	* ext/extmk.rb.in (arg_config): should use Shellwords::shellwords.

Mon Mar 25 13:24:20 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/socket/socket.c (bsock_do_not_rev_lookup_set): should not be
	  allowed when $SAFE > 3.

Mon Mar 25 11:32:21 2002  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* dln.c (dln_argv0): unused unless USE_DLN_A_OUT.

	* ext/digest: add depend files.

	* ext/syslog: ditto.

Sun Mar 24 12:19:09 2002  Koji Arai  <jca02266@nifty.ne.jp>

	* dir.c (fnmatch): "*/bar" (with FNM_PATHNAME flag) does not
	  match "foo/bar".

Sat Mar 23 01:50:30 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>
